--- a/week18/server/package.json
+++ b/week18/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "publish": "scp -P -r 8023 ./* cuishunbiao@127.0.0.1:/home/cuishunbiao/server"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
